refer to correct domain in .env template

--- a/web/production/.env.template
+++ b/web/production/.env.template
@@ -2,6 +2,6 @@
 export TF_TOKEN_app_terraform_io=""
 
 # Account | Cloudflare Pages | Edit
-# Zone | DNS | Edit -> "beesho.net"
-# Zone | Single Redirect | Edit -> "beesho.net"
+# Zone | DNS | Edit -> "cycas.me"
+# Zone | Single Redirect | Edit -> "cycas.me"
 export CLOUDFLARE_API_TOKEN=""
